<resources>
    <string name="app_name">Reminder</string>
    <string name="name_new_routine_caption">Name</string>
    <string name="hint_new_routine_edit">Enter new routine</string>
    <string name="mon_new_routine_button">Mon</string>
    <string name="tue_new_routine_button">Tue</string>
    <string name="wed_new_routine_button">Wed</string>
    <string name="thu_new_routine_button">Thu</string>
    <string name="fri_new_routine_button">Fri</string>
    <string name="sat_new_routine_button">Sat</string>
    <string name="sun_new_routine_button">Sun</string>
    <string name="confirm_button">Confirm</string>
    <string name="success_new_routine">New Routine have been planed.</string>
    <string name="fail_not_saved">Something went wrong. No new Routine created.</string>
    <string name="button_next">Tomorrow &gt;</string>
    <string name="button_previous">&lt; Yesterday</string>
    <string name="popup_menu_item_delete">Delete</string>

</resources>